fixed issue with responsiveness on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,8 @@ h1 {
     width: 75%;
 }
 
-.col-2 {
+.col-md-2,
+.col-sm-4 {
     border: 2px solid black;
     margin: 3px;
 }
